revised README.md

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             </section>
 
 
-            <!-- ** Benefits / Right Side Section ** -->
-            <section class="benefits-container">
+            <!-- ** Benefits / Right Aside Section ** -->
+            <aside class="benefits-container">
 
                 <!--Lead Generation-->
                 <article class="benefit">
@@ -92,7 +92,7 @@
                     </p>
                 </article>
 
-            </section>
+            </aside>
 
 
             <!-- ** Footer ** -->
